[project]
name = "gradheatmap"
version = "0.2.0"
description = "Automatic Grad-CAM heatmap generator for TensorFlow/Keras and PyTorch models"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [{ name = "AhmedAbdAlKareem1" }]
requires-python = ">=3.8"
dependencies = [
  "numpy<2",
  "opencv-python>=4.7"
]

[project.optional-dependencies]
tf = ["tensorflow>=2.10"]
torch = ["torch", "torchvision"]

[project.urls]
Homepage = "https://github.com/AhmedAbdAlKareem1/GradHeatMap-pyTorch-tensorflow"
Issues = "https://github.com/AhmedAbdAlKareem1/GradHeatMap-pyTorch-tensorflow/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gradheatmap"]
license-files = ["LICENSE"]
